--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,27 +1,1134 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  font-family: Inter, sans-serif !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  letter-spacing: 0.2px;
+  line-height: 20px;
+  font-weight: 500;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Positions * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.fixed {
+  position: fixed;
+}
+
+.sticky {
+  position: sticky;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.bottom-0 {
+  bottom: 0;
+}
+
+.top-0 {
+  top: 0;
+}
+
+.left-0 {
+  left: 0;
+}
+
+.left-half {
+  left: 50%;
+}
+
+.top-half {
+  top: 50%;
+}
+
+.right-0 {
+  right: 0;
+}
+
+.v-center {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.h-center {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.vh-center {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Transform * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.-translate-x-half {
+  transform: translateX(-50%);
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Display * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+/* Ref: https://tailwindcss.com/docs/flex */
+
+.flex {
+  display: flex;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
+}
+
+.justify-stretch {
+  justify-content: stretch;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.items-center-important {
+  align-items: center !important;
+}
+
+.items-start {
+  align-items: flex-start;
+}
+
+.items-end {
+  align-items: flex-end;
+}
+
+.items-stretch {
+  align-items: stretch;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.flex-none {
+  flex: none;
+}
+
+/* .flex-centers {
+  justify-content: center;
+  align-items: center;
+} */
+
+.flex-col {
+  flex-direction: column;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-row-reverse {
+  flex-direction: row-reverse;
+}
+
+.flex-grow-0 {
+  flex-grow: 0;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.gap-4 {
+  gap: 4px;
+}
+
+.gap-6 {
+  gap: 6px;
+}
+
+.gap-8 {
+  gap: 8px;
+}
+
+.gap-10 {
+  gap: 10px;
+}
+
+.gap-12 {
+  gap: 12px;
+}
+
+.gap-16 {
+  gap: 16px;
+}
+
+.gap-20 {
+  gap: 20px;
+}
+
+.gap-24 {
+  gap: 24px;
+}
+
+.gap-32 {
+  gap: 32px;
+}
+
+.gap-36 {
+  gap: 36px;
+}
+
+/* * Display * */
+
+.none {
+  display: none;
+}
+
+.block {
+  display: block;
+}
+
+.inline {
+  display: inline;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Padding * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.p-0 {
+  padding: 0px;
+}
+
+.p-6 {
+  padding: 6px;
+}
+
+.p-8 {
+  padding: 8px;
+}
+
+.p-12 {
+  padding: 12px;
+}
+
+.p-16 {
+  padding: 16px;
+}
+
+.p-24 {
+  padding: 24px;
+}
+
+.p-32 {
+  padding: 32px;
+}
+
+.p-48 {
+  padding: 48px;
+}
+
+.px-4 {
+  padding-left: 4px !important;
+  padding-right: 4px !important;
+}
+
+.px-6 {
+  padding-left: 6px !important;
+  padding-right: 6px !important;
+}
+
+.px-8 {
+  padding-left: 8px !important;
+  padding-right: 8px !important;
+}
+
+.px-10 {
+  padding-left: 10px !important;
+  padding-right: 10px !important;
+}
+
+.px-12 {
+  padding-left: 12px !important;
+  padding-right: 12px !important;
+}
+
+.px-16 {
+  padding-left: 16px !important;
+  padding-right: 16px !important;
+}
+
+.px-20 {
+  padding-left: 20px !important;
+  padding-right: 20px !important;
+}
+
+.px-24 {
+  padding-left: 24px !important;
+  padding-right: 24px !important;
+}
+
+.px-32 {
+  padding-left: 32px !important;
+  padding-right: 32px !important;
+}
+
+.px-37 {
+  padding-left: 37px !important;
+  padding-right: 37px !important;
+}
+
+.px-64 {
+  padding-left: 64px !important;
+  padding-right: 64px !important;
+}
+
+.px-110 {
+  padding-left: 110px !important;
+  padding-right: 110px !important;
+}
+
+.pt-6 {
+  padding-top: 6px;
+}
+
+.pt-12 {
+  padding-top: 12px;
+}
+
+.pt-16 {
+  padding-top: 16px;
+}
+
+.pt-24 {
+  padding-top: 24px;
+}
+
+.py-4 {
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.py-6 {
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
+.py-8 {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.py-12 {
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.py-14 {
+  padding-top: 14px;
+  padding-bottom: 14px;
+}
+
+.py-16 {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.py-20 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.py-24 {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.py-32 {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.py-34 {
+  padding-top: 34px;
+  padding-bottom: 34px;
+}
+
+.py-36 {
+  padding-top: 36px;
+  padding-bottom: 36px;
+}
+
+.py-40 {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.py-48 {
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.pt-24 {
+  padding-top: 24px;
+}
+
+.pt-32 {
+  padding-top: 32px;
+}
+
+.pt-80 {
+  padding-top: 80px;
+}
+
+.pb-0 {
+  padding-bottom: 0px !important;
+}
+
+.pb-6 {
+  padding-bottom: 6px;
+}
+
+.pb-8 {
+  padding-bottom: 8px;
+}
+
+.pb-12 {
+  padding-bottom: 12px;
+}
+
+.pb-16 {
+  padding-bottom: 16px;
+}
+
+.pb-24 {
+  padding-bottom: 24px;
+}
+
+.pb-32 {
+  padding-bottom: 32px;
+}
+
+.pb-40 {
+  padding-bottom: 40px;
+}
+
+.pr-12 {
+  padding-right: 12px;
+}
+
+.pr-16 {
+  padding-right: 16px;
+}
+
+.pl-16 {
+  padding-left: 16px;
+}
+
+.pl-24 {
+  padding-left: 24px;
+}
+
+.pl-69 {
+  padding-left: 69px;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Margin * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.m-6 {
+  margin: 6px;
+}
+
+.m-12 {
+  margin: 12px;
+}
+
+.m-16 {
+  margin: 16px;
+}
+
+.m-32 {
+  margin: 32px;
+}
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.mb-2 {
+  margin-bottom: 2px;
+}
+
+.mb-4 {
+  margin-bottom: 4px;
+}
+
+.mb-6 {
+  margin-bottom: 6px;
+}
+
+.mb-8 {
+  margin-bottom: 8px;
+}
+
+.mb-12 {
+  margin-bottom: 12px !important;
+}
+
+.mb-16 {
+  margin-bottom: 16px !important;
+}
+
+.mb-24 {
+  margin-bottom: 24px;
+}
+
+.mb-32 {
+  margin-bottom: 32px;
+}
+
+.mb-40 {
+  margin-bottom: 40px;
+}
+
+.mb-48 {
+  margin-bottom: 48px;
+}
+
+.mb-50 {
+  margin-bottom: 50px;
+}
+
+.ml--8 {
+  margin-left: -8px;
+}
+
+.ml-2 {
+  margin-left: 2px;
+}
+
+.ml-4 {
+  margin-left: 4px;
+}
+
+.ml-6 {
+  margin-left: 6px;
+}
+
+.ml-8 {
+  margin-left: 8px;
+}
+
+.ml-12 {
+  margin-left: 12px;
+}
+
+.ml-16 {
+  margin-left: 16px;
+}
+
+.ml-24 {
+  margin-left: 24px;
+}
+
+.ml-32 {
+  margin-left: 32px;
+}
+
+.mt-0 {
+  margin-top: 0 !important;
+}
+
+.mt-4 {
+  margin-top: 4px;
+}
+
+.mt-6 {
+  margin-top: 6px;
+}
+
+.mt-8 {
+  margin-top: 8px;
+}
+
+.mt-12 {
+  margin-top: 12px;
+}
+
+.mt-16 {
+  margin-top: 16px;
+}
+
+.mt-24 {
+  margin-top: 24px;
+}
+
+.mt-28 {
+  margin-top: 28px;
+}
+
+.mt-32 {
+  margin-top: 32px;
+}
+
+.mt-34 {
+  margin-top: 34px;
+}
+
+.mt-40 {
+  margin-top: 40px;
+}
+
+.mt-48 {
+  margin-top: 48px;
+}
+
+.mt-50 {
+  margin-top: 50px;
+}
+
+.mt-56 {
+  margin-top: 56px;
+}
+
+.mr-6 {
+  margin-right: 6px;
+}
+
+.mr-8 {
+  margin-right: 8px;
+}
+
+.mr-12 {
+  margin-right: 12px;
+}
+
+.mr-16 {
+  margin-right: 16px;
+}
+
+.mr-24 {
+  margin-right: 24px;
+}
+
+.my-6 {
+  margin-top: 6px;
+  margin-bottom: 6px;
+}
+
+.my-12 {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+.my-16 {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.my-24 {
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
+.my-40 {
+  margin-top: 40px !important;
+  margin-bottom: 40px !important;
+}
+
+.mx-4 {
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
+.mx-6 {
+  margin-left: 6px;
+  margin-right: 6px;
+}
+
+.mx-8 {
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+.mx-12 {
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
+.mx-16 {
+  margin-left: 16px;
+  margin-right: 16px;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Height and Width * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.h-dscreen {
+  height: 100dvh;
+}
+
+.w-dscreen {
+  width: 100dvw;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
+.h-full {
+  height: 100% !important;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-quarter {
+  width: 30%;
+}
+
+.w-half {
+  width: 50%;
+}
+
+.w-half-quarter {
+  width: 75%;
+}
+
+.max-w-sm {
+  max-width: 991px;
+}
+
+.w-auto {
+  width: auto !important;
+}
+
+.w-content {
+  width: fit-content !important;
+}
+
+.w-content-drawer {
+  width: calc(100vw - 720px);
+}
+
+.h-auto {
+  height: auto !important;
+}
+
+.min-h-screen {
+  min-height: 100vh !important;
+}
+
+.max-h-screen {
+  max-height: 100vh !important;
+}
+
+.max-w-screen {
+  max-width: 100vw;
+}
+
+.h-inherit {
+  height: inherit;
+}
+
+.h-16 {
+  height: 16px;
+}
+
+.w-16 {
+  width: 16px;
+}
+
+.h-24 {
+  height: 24px;
+}
+
+.w-24 {
+  width: 24px;
+}
+
+.h-40 {
+  height: 40px;
+}
+
+.w-40 {
+  width: 40px;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Line Height * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.leading-3 {
+  line-height: 12px;
+}
+
+.leading-4 {
+  line-height: 16px;
+}
+
+.leading-5 {
+  line-height: 20px;
+}
+
+.leading-6 {
+  line-height: 24px;
+}
+
+.leading-7 {
+  line-height: 28px;
+}
+
+.leading-8 {
+  line-height: 32px;
+}
+
+.leading-9 {
+  line-height: 36px;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Border * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+/* .border-primary {
+  border-color: var(--color-primary) !important;
+} */
+
+.border-none {
+  border: none;
+}
+
+.border-1 {
+  border: 1px solid;
+}
+
+.border-2 {
+  border: 2px solid;
+}
+
+.border-1-dash {
+  border: 1px dashed;
+}
+
+.border-2-dash {
+  border: 2px dashed;
+}
+
+.border-1-dash-not-top {
+  border-left: 1px dashed;
+  border-right: 1px dashed;
+  border-bottom: 1px dashed;
+}
+
+.border-2-dash-not-top {
+  border-left: 2px dashed;
+  border-right: 2px dashed;
+  border-bottom: 2px dashed;
+}
+
+.border-b-1 {
+  border-bottom: 1px solid !important;
+}
+
+.border-b-2 {
+  border-bottom: 2px solid !important;
+}
+
+.border-t-1 {
+  border-top: 1px solid !important;
+}
+
+.border-t-2 {
+  border-top: 2px solid !important;
+}
+
+.border-l-1 {
+  border-left: 1px solid !important;
+}
+
+.border-r-1 {
+  border-right: 1px solid !important;
+}
+
+.border-1-b-2 {
+  border-width: 1px 1px 2px 1px !important;
+  border-style: solid !important;
+}
+
+/* todo: please change rounded sm to rounded 4 */
+/* todo: please change rounded to rounded 8 */
+/* todo: please change rounded md to rounded 12 */
+
+.rounded-xs {
+  border-radius: 2px !important;
+}
+
+.rounded-sm {
+  border-radius: 4px !important;
+}
+
+.rounded-4 {
+  border-radius: 4px !important;
+}
+
+.rounded {
+  border-radius: 8px !important;
+}
+
+.rounded-8 {
+  border-radius: 8px !important;
+}
+
+.rounded-md {
+  border-radius: 12px !important;
+}
+
+.rounded-12 {
+  border-radius: 12px !important;
+}
+
+.rounded-16 {
+  border-radius: 16px !important;
+}
+
+.rounded-20 {
+  border-radius: 20px !important;
+}
+
+.rounded-99 {
+  border-radius: 99px !important;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Overflow * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-scroll {
+  overflow: scroll;
+}
+
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Letter Spacing * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.spacing-2 {
+  letter-spacing: 0.2px;
+}
+
+.spacing-10 {
+  letter-spacing: 1px;
+}
+
+.spacing-20 {
+  letter-spacing: 2px;
+}
+
+.spacing-30 {
+  letter-spacing: 3px;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Cursor * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Box Shadow * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.shadow-sm {
+  box-shadow: 0px 4px 8px rgba(17, 24, 38, 0.12);
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Z-Index* */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.z-index-10 {
+  z-index: 10;
+}
+
+.z-index-20 {
+  z-index: 20;
+}
+
+.z-index-30 {
+  z-index: 30;
+}
+
+.z-index-40 {
+  z-index: 40;
+}
+
+.z-index-50 {
+  z-index: 50;
+}
+
+.z-index-100 {
+  z-index: 100;
+}
+
+.z-index-1000 {
+  z-index: 1000;
+}
+
+.z-index-1010 {
+  z-index: 1010;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * White Space * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.space-nowrap {
+  white-space: nowrap;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Object: Image * */
+/* * ------------------------------------------------------------------------------------------- * */
+
+.object-cover {
+  object-fit: cover;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Transition
+/* * ------------------------------------------------------------------------------------------- * */
+
+.transition-duration-300 {
+  transition: all linear 0.3s;
+}
+
+.transition-duration-500 {
+  transition: all linear 0.5s;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Opacity
+/* * ------------------------------------------------------------------------------------------- * */
+
+.opacity-0 {
+  opacity: 0%;
+}
+
+.opacity-50 {
+  opacity: 50%;
+}
+
+.opacity-100 {
+  opacity: 100%;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Scrollbar
+/* * ------------------------------------------------------------------------------------------- * */
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hidden {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+/* * ------------------------------------------------------------------------------------------- * */
+/* * Rotate
+/* * ------------------------------------------------------------------------------------------- * */
+
+.rotating {
+  animation: spinner 1s linear infinite;
+}
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.ant-menu .ant-menu-item {
+  color: white !important;
+  font-size: 16px;
+}
+
+li.ant-menu-item.ant-menu-item-selected {
+  background: white !important;
+  color: #232d3f !important;
+}
+
+li.ant-menu-item.ant-menu-item-active:not(
+    li.ant-menu-item.ant-menu-item-selected
+  ) {
+  color: white !important;
+}
+
+@media only screen and (max-width: 768px) {
+  li.ant-menu-item,
+  li.ant-menu-item.ant-menu-item-selected,
+  li.ant-menu-item.ant-menu-item-active {
+    padding: 0 !important;
+    margin: 0 !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
